test/error/already_parent.gw
class C            { int i; }
class CC extends C { int i; }
